git add: New Maestrias

--- a/Style.css
+++ b/Style.css
@@ -461,10 +461,11 @@ p.informacionFooter {
 
 
 
-.bienvenida_informacion button {
+.estilo_button button {
     display: inline-block;
     background-color: #003c71;
     color: #ffffff;
+    margin: auto 0;
     padding: 12px 24px;
     border-radius: 10px;
     border: none;
@@ -472,6 +473,18 @@ p.informacionFooter {
     transition: 0.3s ease;
 
     /* Mueve el botón hacia la derecha todo lo posible */
+}
+
+
+.button_derecha{
+    
+    display: flex;
+    justify-content: flex-end;
+}
+
+.button_izquieda{
+    display: flex;
+    justify-content: flex-start;
 }
 
 .bienvenida_informacion button:hover {
@@ -709,7 +722,7 @@ p.informacionFooter {
 }
 
 .timeline-content {
-    background-color: #2f363e;
+    background-color: #48788f;
     padding: 1.5rem;
     border-radius: 10px;
 }
@@ -833,6 +846,7 @@ p.informacionFooter {
 
 
 .organigrama__imagen {
+
     width: 100%;
     background-repeat: no-repeat;
     background-position: center;
@@ -841,6 +855,7 @@ p.informacionFooter {
     position: relative;
     margin-bottom: 2rem;
 }
+
 
 
 
@@ -918,7 +933,7 @@ p.informacionFooter {
 .card {
     width: 100%;
     height: 0;
-    padding-bottom: 157.14%; /* Mantener la proporción 35rem x 55rem */
+    padding-bottom: 130%; /* Reducir la proporción */
     border-radius: 10px;
     overflow: hidden;
     cursor: pointer;
@@ -926,6 +941,7 @@ p.informacionFooter {
     color: white;
     box-shadow: 0 10px 30px 5px rgba(0, 0, 0, 0.2);
 }
+
 
 .card img {
     position: absolute;
@@ -1027,13 +1043,13 @@ p.informacionFooter {
     font-style: normal;
     font-size: 6rem;
     line-height: 1;
-    margin-bottom: 1rem;
+    margin-bottom: 0.2rem;
     color: #000000;
     font-weight: 0;
     animation: fadeInUp 2s ease;
     text-align: left;
     margin-left: 5%;
-    width: 30%;
+    width: 60%;
 }
 
 
