--- a/Style.css
+++ b/Style.css
@@ -26,11 +26,11 @@ h1 {
     color: #ffffff;
     text-transform: uppercase;
     text-align: center;
-    
+
 
 }
 
-a{
+a {
     text-transform: none;
 }
 
@@ -42,7 +42,7 @@ body {
 .imagenInicio {
     height: 80rem;
     width: 100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("Img/principal.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("Img/principalOptimizada.jpg");
 
     background-size: cover;
     background-repeat: no-repeat;
@@ -53,6 +53,20 @@ body {
     align-items: center;
     background-color: rgba(0, 0, 0, 0.5);
 }
+
+
+@media (max-width: 768px) {
+    .imagenInicio {
+        height: 30rem; /* Ajusta para pantallas medianas */
+    }
+}
+
+@media (max-width: 480px) {
+    .imagenInicio {
+        height: 20rem; /* Ajusta para pantallas pequeñas */
+    }
+}
+
 
 
 
@@ -84,7 +98,7 @@ body {
 
 
 @media (max-width:760px) {
-    .inicio__informacion h1{
+    .inicio__informacion h1 {
         justify-content: center;
         align-items: center;
         font-size: 250%;
@@ -108,9 +122,35 @@ body {
 }
 
 
+p,h2{
+    text-transform: none;
+}
+
+
+.contenedorNav {
+    display: grid;
+    grid-template-columns: 30% 70%;
+    align-items: flex-end;
+    margin-right: 10rem;
+    margin-left: 3rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+.logoUca {
+    display: block;
+    font-size: 24px;
+    cursor: pointer;
+}
 
 
 
+.contenedor {
+    background-color: #003c71;
+    display: flex;
+    align-items: flex-end;
+    margin-left: auto;
+}
 
 
 .inicio__informacion {
@@ -127,7 +167,7 @@ body {
 }
 
 .menu>ul {
-    background-color: #ffffff;
+    background-color: #003c71;
     /* Color de fondo del menú principal */
 }
 
@@ -138,7 +178,7 @@ body {
 .menu ul li a {
 
     display: inline-block;
-    color: #333333;
+    color: #ffffff;
     /* Color del texto del menú principal */
 
     padding: 14px 16px;
@@ -155,7 +195,7 @@ body {
 
     display: none;
     position: absolute;
-    background-color: #ffffff;
+    background-color: #003c71;
     /* Color de fondo del menú desplegable */
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
@@ -171,7 +211,7 @@ body {
 
 .menu .dropdown-content a {
 
-    color: #333333;
+    color: #ffffff;
     /* Color del texto del menú desplegable */
     padding: 12px 16px;
     display: block;
@@ -186,8 +226,27 @@ body {
     display: block;
 }
 
+@media (max-width: 1000px) {
+
+
+}
+
+
 /* Media query para pantallas pequeñas */
-@media (max-width: 768px) {
+@media (max-width: 950px) {
+
+    .contenedorNav {
+        display: grid;
+        grid-template-columns: 1fr;   /* Una única columna (100% del ancho disponible) */
+        grid-template-rows: auto;   
+        gap: 1rem;
+    }
+  
+    .logoUca {
+        margin: 0 auto;
+
+    }
+
     .menu>ul {
         flex-direction: column;
         text-align: center;
@@ -220,14 +279,7 @@ body {
     }
 }
 
-.LogoUca {
-    height: 80px;
-    /* Ajusta la altura de la imagen según tu diseño */
-    width: auto;
-    /* Mantén la proporción de la imagen */
-    padding: 14px 10px;
 
-}
 
 h2 {
     font-style: italic;
@@ -259,17 +311,11 @@ p.weare {
 p.informacionFooter {
     margin: auto;
     font-size: medium;
+
     color: #cccccc;
 }
 
-/* Contenedores del Nav Bar - Se dividen en dos uno el logo de la uca y el otro de los enlaces */
-.contenedor {
-    background-color: #ffffff;
-    display: inline-block;
-    /* Cambiamos a inline-block para que se alineen horizontalmente */
-    margin-right: 30px;
-    /* Espacio entre contenedores */
-}
+
 
 .contenido {
     padding: 10px;
@@ -327,21 +373,24 @@ p.informacionFooter {
 
 @media (max-width: 760px) {
     .bienvenida_informacion_maestria {
-        grid-template-columns: 90%; /* Una columna única para pantallas pequeñas */
+        grid-template-columns: 90%;
+        /* Una columna única para pantallas pequeñas */
     }
 
     .grid-item-1 {
-        grid-area: 2 / 1; /* Mueve el primer ítem a la segunda posición */
+        grid-area: 2 / 1;
+        /* Mueve el primer ítem a la segunda posición */
     }
 
     .grid-item-2 {
-        grid-area: 1 / 1; /* Mueve el segundo ítem a la primera posición */
+        grid-area: 1 / 1;
+        /* Mueve el segundo ítem a la primera posición */
     }
 }
 
 
 @media (max-width:760px) {
-    .bienvenida_informacion_radio{
+    .bienvenida_informacion_radio {
         grid-template-columns: 70%;
     }
 }
@@ -350,7 +399,7 @@ p.informacionFooter {
 
 
 .bienvenida__texto {
-    
+
     font-style: normal;
     font-size: 2.2rem;
     line-height: 1.5;
@@ -361,7 +410,7 @@ p.informacionFooter {
 }
 
 .bienvenida__texto2 {
-  
+
     font-style: normal;
     font-size: 1.7rem;
     line-height: 1.5;
@@ -372,7 +421,7 @@ p.informacionFooter {
 }
 
 .bienvenida__texto3 {
-   
+
     font-style: normal;
     font-size: 1.5rem;
     line-height: 1.5;
@@ -385,7 +434,7 @@ p.informacionFooter {
 
 
 .radio__texto {
-  
+
     font-style: normal;
     font-size: 2.2rem;
     line-height: 1.5;
@@ -396,7 +445,7 @@ p.informacionFooter {
 }
 
 .radio__texto2 {
-    
+
     font-style: normal;
     font-size: 1.7rem;
     line-height: 1.5;
@@ -408,7 +457,7 @@ p.informacionFooter {
 
 
 .radio__texto3 {
-   
+
     font-style: normal;
     font-size: 1.5rem;
     line-height: 1.5;
@@ -417,7 +466,7 @@ p.informacionFooter {
     animation: fadeInUp 2s ease;
 }
 
-.radio_titulo h2{
+.radio_titulo h2 {
     font-family: "Playfair Display", serif;
     font-style: normal;
     font-size: 6rem;
@@ -431,7 +480,7 @@ p.informacionFooter {
 }
 
 
-.linea__separadora__blanca{
+.linea__separadora__blanca {
 
     height: 0.5rem;
     background-color: #ffefef;
@@ -490,13 +539,13 @@ p.informacionFooter {
 }
 
 
-.button_derecha{
-    
+.button_derecha {
+
     display: flex;
     justify-content: flex-end;
 }
 
-.button_izquieda{
+.button_izquieda {
     display: flex;
     justify-content: flex-start;
 }
@@ -619,19 +668,19 @@ p.informacionFooter {
 }
 
 
-.historia_encabezado{
+.historia_encabezado {
     display: grid;
     grid-template-columns: 50% 50%;
     justify-content: center;
     gap: 5rem;
-    
-    
+
+
     align-items: center;
     margin: 0 auto;
     width: 80%;
 }
 
-.historia_encabezado h2{
+.historia_encabezado h2 {
     color: #ccc;
     text-align: left;
     text-decoration: none;
@@ -639,7 +688,7 @@ p.informacionFooter {
 }
 
 
-.linea__separadora_blanca{
+.linea__separadora_blanca {
     background-color: #cccccc;
     height: 150%;
     width: 0.1rem;
@@ -649,16 +698,16 @@ p.informacionFooter {
 .historia__informacion {
     width: 100%;
     margin: 8rem auto;
-   padding-bottom: 5rem;
+    padding-bottom: 5rem;
 }
 
-.historia_padding{
+.historia_padding {
     width: 60%;
     margin: 3rem auto;
-    
+
 }
 
-.historia_encabezado a{
+.historia_encabezado a {
     display: block;
     margin: 1.5rem;
     font-style: normal;
@@ -699,11 +748,16 @@ p.informacionFooter {
     margin-bottom: 20px;
     width: 100%;
     position: relative;
-    opacity: 0; /* Start hidden */
-    transform: translateY(10px); /* Start slightly moved down */
-    animation: appear 1s forwards; /* Trigger animation */
-    animation-timeline: view(); /* Use animation-timeline */
-    animation-range: entry 0% cover 35%; /* Range to trigger animation */
+    opacity: 0;
+    /* Start hidden */
+    transform: translateY(10px);
+    /* Start slightly moved down */
+    animation: appear 1s forwards;
+    /* Trigger animation */
+    animation-timeline: view();
+    /* Use animation-timeline */
+    animation-range: entry 0% cover 35%;
+    /* Range to trigger animation */
 }
 
 .timeline-item:last-child {
@@ -761,6 +815,7 @@ p.informacionFooter {
         opacity: 0;
         transform: translateY(20px);
     }
+
     100% {
         opacity: 1;
         transform: translateY(0);
@@ -769,43 +824,46 @@ p.informacionFooter {
 
 
 /* responsive */
-@media(max-width: 767px){
-	.timeline-items::before{
-		left: 7px;
-	}
-	.timeline-item:nth-child(odd){
-		padding-right: 0;
-		text-align: left;
-	}
-	.timeline-item:nth-child(odd),
-	.timeline-item:nth-child(even){
-		padding-left: 37px;
-	}
-	.timeline-dot{
-		left:0;
-	}
+@media(max-width: 767px) {
+    .timeline-items::before {
+        left: 7px;
+    }
+
+    .timeline-item:nth-child(odd) {
+        padding-right: 0;
+        text-align: left;
+    }
+
+    .timeline-item:nth-child(odd),
+    .timeline-item:nth-child(even) {
+        padding-left: 37px;
+    }
+
+    .timeline-dot {
+        left: 0;
+    }
 }
 
 @media (max-width:760px) {
-    .historia_encabezado{
+    .historia_encabezado {
         grid-template-columns: 100%;
         margin: 1rem;
         gap: 0;
     }
 
-    .historia_encabezado h1{
+    .historia_encabezado h1 {
         font-size: 3rem;
     }
 
-    .historia_encabezado h2{
+    .historia_encabezado h2 {
         font-size: 2rem;
     }
 
-    .historia_encabezado a{
+    .historia_encabezado a {
         font-size: 2rem
     }
 
-    .historia_padding{
+    .historia_padding {
         width: 90%;
         font-size: 1rem;
 
@@ -914,9 +972,12 @@ p.informacionFooter {
 
 .main_card {
     display: grid;
-    grid-template-columns: repeat(4, 1fr); /* 4 columnas por fila */
-    gap: 2rem; /* Espacio entre tarjetas */
-    width: 80%; /* Ancho total del contenedor */
+    grid-template-columns: repeat(4, 1fr);
+    /* 4 columnas por fila */
+    gap: 2rem;
+    /* Espacio entre tarjetas */
+    width: 80%;
+    /* Ancho total del contenedor */
     margin: 0 auto;
     justify-content: center;
     align-items: center;
@@ -928,26 +989,30 @@ p.informacionFooter {
 
 @media (max-width: 1200px) {
     .main_card {
-        grid-template-columns: repeat(3, 1fr); /* 3 columnas por fila en pantallas medianas */
+        grid-template-columns: repeat(3, 1fr);
+        /* 3 columnas por fila en pantallas medianas */
     }
 }
 
 @media (max-width: 900px) {
     .main_card {
-        grid-template-columns: repeat(2, 1fr); /* 2 columnas por fila en pantallas pequeñas */
+        grid-template-columns: repeat(2, 1fr);
+        /* 2 columnas por fila en pantallas pequeñas */
     }
 }
 
 @media (max-width: 600px) {
     .main_card {
-        grid-template-columns: 1fr; /* 1 columna por fila en pantallas muy pequeñas */
+        grid-template-columns: 1fr;
+        /* 1 columna por fila en pantallas muy pequeñas */
     }
 }
 
 .card {
     width: 100%;
     height: 0;
-    padding-bottom: 130%; /* Reducir la proporción */
+    padding-bottom: 130%;
+    /* Reducir la proporción */
     border-radius: 10px;
     overflow: hidden;
     cursor: pointer;
@@ -974,7 +1039,8 @@ p.informacionFooter {
     left: 30px;
     margin: 0;
     transition: bottom .3s .3s ease-out;
-    font-size: 2rem; /* Tamaño de fuente reducido para ajustarse mejor */
+    font-size: 2rem;
+    /* Tamaño de fuente reducido para ajustarse mejor */
     font-family: Arial, Helvetica, sans-serif;
     font-weight: normal;
 }
@@ -990,7 +1056,8 @@ p.informacionFooter {
 .card p {
     bottom: 75px;
     left: 25px;
-    font-size: 1.5rem; /* Ajuste de tamaño de fuente */
+    font-size: 1.5rem;
+    /* Ajuste de tamaño de fuente */
 }
 
 .card:hover h2 {
@@ -1041,7 +1108,7 @@ p.informacionFooter {
 }
 
 
-.linea__separadora{
+.linea__separadora {
     height: 0.1rem;
     background-color: #000000;
     width: 85%;
@@ -1052,7 +1119,7 @@ p.informacionFooter {
 }
 
 
-.maestria_titulo h2{
+.maestria_titulo h2 {
     font-family: "Playfair Display", serif;
     font-style: normal;
     font-size: 6rem;
@@ -1067,7 +1134,7 @@ p.informacionFooter {
 }
 
 
-.eventos_titulo h2{
+.eventos_titulo h2 {
 
     font-family: "Playfair Display", serif;
     font-style: normal;
@@ -1084,7 +1151,7 @@ p.informacionFooter {
 }
 
 
-.OAL__titulo h2{
+.OAL__titulo h2 {
 
     font-family: "Playfair Display", serif;
     font-style: normal;
@@ -1104,7 +1171,7 @@ p.informacionFooter {
 }
 
 
-.estructura_ciencias{
+.estructura_ciencias {
     width: 70%;
     margin: 0 auto;
 }
@@ -1112,28 +1179,36 @@ p.informacionFooter {
 
 @media (max-width: 767px) {
     h1 {
-        font-size: 1.8rem; /* Reduce el tamaño del h1 en pantallas pequeñas */
-        
+        font-size: 1.8rem;
+        /* Reduce el tamaño del h1 en pantallas pequeñas */
+
     }
 
     h2 {
-        font-size: 1.5rem; /* Reduce el tamaño del h2 en pantallas pequeñas */
+        font-size: 1.5rem;
+        /* Reduce el tamaño del h2 en pantallas pequeñas */
     }
 
     p {
-        font-size: 1rem; /* Reduce el tamaño del texto en párrafos */
-        line-height: 1.6rem; /* Ajusta la altura de línea para mejor legibilidad */
-        margin-bottom: 1rem; /* Añade espacio inferior para separarlos mejor */
+        font-size: 1rem;
+        /* Reduce el tamaño del texto en párrafos */
+        line-height: 1.6rem;
+        /* Ajusta la altura de línea para mejor legibilidad */
+        margin-bottom: 1rem;
+        /* Añade espacio inferior para separarlos mejor */
     }
 
-    
+
 }
 
-.OAL{
+.OAL {
     width: 80%;
     margin: 0 auto;
 }
 
+header {
+    background-color: #003c71;
+}
 
 
 .header-title {
@@ -1152,6 +1227,7 @@ p.informacionFooter {
     font-weight: 700;
     letter-spacing: 2px;
 }
+
 /* Global Styles */
 .containeroal body {
     font-family: 'Lato', sans-serif;
@@ -1335,14 +1411,15 @@ p.informacionFooter {
 }
 
 .enlace-blanco {
-    color: white;  /* Cambia el color del enlace a blanco */
-    
+    color: white;
+    /* Cambia el color del enlace a blanco */
+
 }
 
 
 /* Section Styles */
 .requisitos-section {
-    background-color:  #f8f8f8;
+    background-color: #f8f8f8;
     padding: 20px;
     border-radius: 10px;
     margin: 20px;
@@ -1422,6 +1499,6 @@ p.informacionFooter {
 }
 
 
-.OAL__titulo h2{
+.OAL__titulo h2 {
     text-transform: none;
 }
